--- a/demo/src/main/res/layout/fragment_main.xml
+++ b/demo/src/main/res/layout/fragment_main.xml
@@ -14,12 +14,29 @@
         android:layout_height="550dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
-    <Button
-        android:id="@+id/btn"
-        android:text="Modify list"
-        android:layout_margin="20dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal">
+
+        <EditText
+                android:id="@+id/et_msg"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Type message here"
+                android:textAllCaps="false"
+                android:maxLines="2"
+                android:gravity="start"/>
+
+        <Button
+                android:id="@+id/btn_send"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Send"
+                android:textAllCaps="false"
+                android:textSize="20sp"/>
+    </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
