--- a/demo/src/main/res/layout/fragment_main.xml
+++ b/demo/src/main/res/layout/fragment_main.xml
@@ -8,10 +8,20 @@
     android:orientation="vertical"
     tools:context=".MainFragment">
 
+    <TextView
+            android:layout_marginVertical="12dp"
+            android:id="@+id/tv_name"
+            android:text="Lily"
+            android:textSize="24sp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
     <LinearLayout
@@ -38,5 +48,7 @@
                 android:textAllCaps="false"
                 android:textSize="20sp"/>
     </LinearLayout>
-
+    <Space
+            android:layout_width="match_parent"
+            android:layout_height="30dp"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
