--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -21,8 +21,7 @@
         android:id="@+id/rv"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -48,6 +47,7 @@
                 android:textAllCaps="false"
                 android:textSize="20sp"/>
     </LinearLayout>
+
     <Space
             android:layout_width="match_parent"
             android:layout_height="30dp"/>
