--- a/sample/src/main/res/layout/item_msg_receive.xml
+++ b/sample/src/main/res/layout/item_msg_receive.xml
@@ -7,8 +7,8 @@
         android:orientation="horizontal">
 
     <ImageView
+            android:id="@+id/img_avatar"
             android:layout_marginStart="10dp"
-            android:src="@drawable/female"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
 
