--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_main"
-        android:name="pers.shawxingkwok.sample.ui.main.MainFragment"
+        android:name="pers.shawxingkwok.sample.ui.main.ContactsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
