--- a/contacts/src/main/res/layout/fragment_main.xml
+++ b/contacts/src/main/res/layout/fragment_main.xml
@@ -10,6 +10,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
+        tools:listitem="@layout/item_contact"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
