--- a/contacts/src/main/res/layout/item_contact.xml
+++ b/contacts/src/main/res/layout/item_contact.xml
@@ -12,20 +12,23 @@
             android:paddingVertical="8dp"
             android:paddingStart="12dp"
             android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            tools:ignore="RtlSymmetry">
 
         <ImageView
             android:id="@+id/img_avatar"
+            tools:src="@drawable/aki"
             android:layout_marginStart="10dp"
             android:layout_width="32dp"
             android:layout_height="match_parent"/>
 
         <TextView
             android:id="@+id/tv"
+            tools:text="Aki"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
             />
     </LinearLayout>
 
